fix container overflow and h2h img

--- a/src/styles/History.scss
+++ b/src/styles/History.scss
@@ -110,12 +110,17 @@ $secondary: #2b9cdc;
   align-items: center;
   &__logo{
     margin: 20px;
+    max-width: 250px;
+    @media screen and (max-width: 768px) {
+      max-width: 100px;
+    }
   }
 }
 .td__H2H-stats{
   height: 30px;
   width: 90px;
 }
+
 @keyframes animate{
   0%{
     transform: translateX(-100%);
